--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -123,7 +123,7 @@ en:
         password: Password
         password_confirmation: Password Confirmation
         current_password: Current password
-        current_password_message: we need your current password to confirm your changes
+        current_password_message: We need your current password to confirm your changes
         change_message: leave blank if you don't want to change it
         minimum_character: Password must have at least %{count} characters minimum
         update: Update
@@ -158,7 +158,7 @@ en:
         new_confirmation: Didn't receive confirmation instructions?
     show:
       upload: Upload
-      choose_file: Choose file
+      change_avatar: Change
       profile: Profile
       name: Name
       gender: Gender
@@ -167,6 +167,8 @@ en:
       phone: Phone
       email: Email
       reset_password: Reset password
+      female: Female
+      male: Male
   messages:
     index:
       your_message: Your message
