--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -7,11 +7,13 @@ vi:
       stop_sending_enroll_request: Bạn có chắc chắn muốn huỷ gửi yêu cầu tham gia khoá học này?
       send_enrolling_request: Bạn có chắc chắn muốn gửi yêu cầu tham gia khoá học này?
       wait_to_be_approved: Bạn cần phải chờ để được chấp thuận bởi cán bộ phòng IC
-      remove_participant: Bạn có chắc muốn xoá người này khỏi khoá học?
       add_participant: Bạn có chắc muốn thêm người này vào khoá học?
+      unenroll_participant: Bạn có chắc không cho người này tham gia khoá học?
+      remove_participant: Bạn có chắc muốn xoá người này khỏi khoá học?
       cannot_be_undo: Hành động này không thể hoàn tác!
     success:
       add_participant: Thêm vào khoá học thành công!
+      unenroll_participant: Hủy tham gia khoá học thành công!
       remove_participant: Xoá khỏi khoá học thành công!
       stop_sending_enroll_request: Huỷ gửi yêu cầu tham gia khoá học thành công!
       send_enrolling_request: Gửi yêu cầu tham gia khoá học thành công!
@@ -72,6 +74,7 @@ vi:
       opening: Đang mở đơn
       ongoing: Đang diễn ra
       finished: Đã kết thúc
+      enrolling: Đang đăng kí
     user_event:
       unpublish: Chưa công khai
       publish: Công khai
@@ -91,6 +94,7 @@ vi:
     participant:
       add: Thêm
       remove: Xoá
+      unenroll: Hủy
     requirement:
       upload: Gửi ảnh
       choose_file: Chọn ảnh
@@ -195,7 +199,6 @@ vi:
     page_submenu:
       latest: Mới nhất
       most_popular: Phổ biến nhất
-      opening: Đang mở đơn
       my_courses: Khoá học của tôi
   kaminari:
     first_page:
