--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -128,8 +128,8 @@ en:
     noti_5: <b>%{user}</b> updated <b>%{requirement}</b> requirement for <b>%{event}</b> at <i><b>%{time}</b></i>.
     noti_6: <b>%{user}</b> approved your <b>%{requirement}</b> requirement at <i><b>%{time}</b></i>.
     noti_7: <b>%{user}</b> unapproved your <b>%{requirement}</b> requirement at <i><b>%{time}</b></i>.
-    noti_8: "You've got a message from <b>%{user}</b>: <br/>\"<i><b>%{message}</i></b>\"<br/>at <i><b>%{time}</b></i>."
-    noti_9: <b>%{user}</b> deleted a message at <i><b>%{time}</b></i>.
+    noti_8: "You've got a message from <b>%{user}</b> in <b>%{event}</b>: <br/>\"<i><b>%{message}</i></b>\"<br/>at <i><b>%{time}</b></i>."
+    noti_9: <b>%{user}</b> from <b>%{event}</b> deleted a message at <i><b>%{time}</b></i>.
     index:
       no_notification: You don't have any notification yet!
       mark_all_as_read: Mark all as read
